--- a/Documents/Design/index.tex
+++ b/Documents/Design/index.tex
@@ -1,6 +1,11 @@
 \documentclass[titlepage]{report}
 
 % Preamble
+
+% Required packages
+\usepackage{graphicx}
+
+% Formatting options
 \renewcommand{\chaptername}{}
 
 \begin{document}
