--- a/Documents/Design/index.tex
+++ b/Documents/Design/index.tex
@@ -31,9 +31,9 @@
 \tableofcontents
 
 % Introduction and some basic things
-\include{Introduction}
+\input{Introduction}
 
 % Software design
-\include{Software/overview}
+\input{Software/overview}
 
 \end{document}
