git-svn-id: svn://dunari.cis.vtc.edu/POWER@106 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Design/index.tex
+++ b/Documents/Design/index.tex
@@ -33,6 +33,9 @@
 % Introduction and some basic things
 \input{Introduction}
 
+% Hardware design
+\input{Hardware/overview}
+
 % Software design
 \input{Software/overview}
 
