--- a/Documents/Design/Software/Backend-FactoryReset.tex
+++ b/Documents/Design/Software/Backend-FactoryReset.tex
@@ -1,7 +1,7 @@
 %% Template file for all Software/Hardware modules
 
 % Replace "Name of Module" with the name of this module
-\section{Factory Reset}
+\subsection{Factory Reset}
 
 \subsubsection{Description}
 
