--- a/Documents/Design/Software/Backend-PowerBillGuestimator.tex
+++ b/Documents/Design/Software/Backend-PowerBillGuestimator.tex
@@ -1,7 +1,7 @@
 %% Template file for all Software/Hardware modules
 
 % Replace "Name of Module" with the name of this module
-\section{Power Bill Guestimator}
+\subsection{Power Bill Guestimator}
 
 \subsubsection{Description}
 
