--- a/Documents/Design/Software/Frontend-Authentication.tex
+++ b/Documents/Design/Software/Frontend-Authentication.tex
@@ -1,7 +1,7 @@
 %% Template file for all Software/Hardware modules
 
 % Replace "Name of Module" with the name of this module
-\section{Authentication}
+\subsection{Authentication}
 
 \subsubsection{Description}
 
