--- a/Documents/Design/Software/overview.tex
+++ b/Documents/Design/Software/overview.tex
@@ -17,7 +17,7 @@ The microprocessor code is documented in the hardware section because it is very
 
 \subsection{The Display Backend}
 
-The general plan for the backend is to write modules for a Django web application. These modules will either be running in the background and reporting to the through the REST API functions, or responding to user requests.
+The general plan for the backend is to write modules for a Django web application. These modules will either be running in the background and reporting the data given to the server from the Satellites to the database through the REST API functions, or responding to user requests sent through the REST API.
 
 The logic for using Django as the base, and write modules around Django, is one of necessity. We do not have enough time or manpower to make everything we need from scratch. Therefore, we will be using several open source utilities to assist us. 
 
@@ -29,7 +29,24 @@ Another advantage of Django is that is comes with a very extensive, expandable, 
 
 \subsection{The Display Frontend}
 
-The general plan for the frontend is to serve up some fairly static pages, and uses extensive amounts of Javascript to fill in the content and animate things. The frontend will communicate with the backend through the REST API. This will be fairly simply, since the backend API will support multiple formats, including JSON.
+The general plan for the frontend is to serve up some fairly static pages, and use extensive amounts of Javascript to fill in the content and animate things. The frontend will communicate with the backend through the REST API. This will be fairly simply, since the backend API will support multiple formats, including JSON.
+
+To assist us on the frontend, we will be using several open source libraries. They will all serve a very clear function.
+
+\begin{itemize}
+ \item Backbone.js - A library to provide basic functions dealing with fetching and syncing data with the server
+ \begin{itemize}
+  \item Backbone.js will deal with tracking the "model" portion of our Javascript code.
+  \item Backbone.js will be made compatible with our REST API by using a small extension called backbone-tastypie
+ \end{itemize}
+ \item iCanHaz - A library that provides advanced templating functionality. This is client-side templating, and relies on several "fake" HTML tags
+ \item RequireJS - A library that deal with tracking and loading assets asynchronously. This includes loading libraries that we will be using
+ \item jQuery - jQuery will be used for both parts of the front end and for the ajax support
+ \begin{itemize}
+  \item We will use jqplot for dealing with graphs
+  \item We will use the jquery UI to deal with most of our widgets and such
+ \end{itemize}
+\end{itemize}
 
 \section{Program Flow}
 
@@ -45,25 +62,35 @@ The last thread will be running a "dumb" web page that servers up static HTML an
 
 This application will use a SQL database to store all data. Each module will interact with the REST API, which interacts with the database as needed. The diagram for this database is broken down in the "Sub-modules" section, with a diagram for each logical grouping of tables.
 
-\begin{figure}
+\begin{figure}[H]
 \centering
 \includegraphics[scale=0.75]{Software/images/DataFlowDiagram.png}
 \caption{Data Flow Diagram}
-\label{DataFlowDiagram}
+\label{img:S_DataFlowDiagram}
 \end{figure}
 
-Figure \ref{DataFlowDiagram} shows how various components will be interacting. Notice that the database is not directly accessed by any components, but goes through the REST API instead. This allows us to provide a standard interface should be more-or-less accessible from any programming language or system. This will also allow us to use some well-known security features, such as TLS.
+Figure \ref{img:S_DataFlowDiagram} shows how various components will be interacting. Notice that the database is not directly accessed by any components, but goes through the REST API instead. This allows us to provide a standard interface should be more-or-less accessible from any programming language or system. This will also allow us to use some well-known security features, such as TLS.
 
 \section{UML Diagrams}
 
 % Any diagrams that can describe the system design
 %  Such as inheritance and actors
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.75]{Software/images/Power-Package-Listing.png}
+\caption{Listing of software modules}
+\label{img:S_PackageListing}
+\end{figure}
+
+Figure \ref{img:S_PackageListing} contains all the Django modules that will be created inside the actual Django "website" itself. This is basically the folder hierarchy of our web application source code. The "power" folder consists of folders for each module (not including the various open-source modules we are using, since those are being controlled via PIP). Each of these contains models.py file, which specifies what the database for that module should look like, a \_\_init\_\_.py file which will register the module with the REST API, and whatever other files that module needs. 
 
 \section{Potential Problems}
 
 Using open-source libraries requires us to learn them. This is a big problem because of the time constraints on this project, and will require us to spend almost as much time learning as we will be in development (possibly more). This can lead to frustration, especially in light of the fact that we will need to learn the languages in addition to the libraries.
 
 However, using well developed and designed libraries allows us to skip over a good part of the development and planning. We will be able to use extensive API's without taking responsibility for maintaining the software. This will allow us to focus on our product instead of the all the small things that make it up. 
+
+Another potential problem with using the suggested architecture will be clients that don't like using Javascript in their browser. Using heavy javascript allows us to offset a good bit of the load from our low-powered server to the clients computers, which will have a good deal more power. If we wanted to support clients that don't like using javascript (ie, security nuts), we would be looking at adding a significant load to our server (text-processing can consume a good bit of resources, especially string manipulation). Although we may be able to do, for the first version we will simply add "Javascript support" as a requirement for the clients.
 
 \section{The Backend}
 
