--- a/Documents/Design/index.tex
+++ b/Documents/Design/index.tex
@@ -62,7 +62,7 @@
 \input{Introduction}
 
 % Hardware design
-%\input{Hardware/overview}
+\input{Hardware/overview}
 
 % Software design
 \input{Software/overview}
