Fixed the spelling of my name and email address under Title and authors.
git-svn-id: svn://dunari.cis.vtc.edu/POWER@113 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Design/index.tex
+++ b/Documents/Design/index.tex
@@ -30,8 +30,8 @@
 % Title and authors
 \title{P.O.W.E.R. High Level Design Document}
 \author{
-  Grace De Gues\\
-  \texttt{gdegues@vtc.edu}
+  Grace De Geus\\
+  \texttt{gdegeus@vtc.edu}
   \and
   Charles Hathaway\\
   \texttt{chathaway2@vtc.edu}
