git-svn-id: svn://dunari.cis.vtc.edu/POWER@114 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Design/Hardware/Server-Hardware.tex
+++ b/Documents/Design/Hardware/Server-Hardware.tex
@@ -17,7 +17,7 @@ Reference Platform. It's a small form\-factor, low\-power machine with the follo
 		\item Header for Solid State Drive (SSD) power
 		\item Ethernet port
 		\item 5x USB ports
-		\item GPIO pin header
+		\item General Purpose Input/Output (GPIO) pin header
 	\end{itemize}
 \end{itemize}
 
@@ -25,8 +25,8 @@ If for whatever reason, using this mainboard falls through, it should be noted t
 requirements for the Server hardware concern not just specifications, but interfaces as well.
 In particular, this project requires at least Ethernet, 2 USB ports, a SATA port, and accessible
 GPIO pins.
-\subsection{Storage}
+\subsubsection{Storage}
 The Server's mainboard is connected via SATA to a 40GB SSD
 
-\subsection{Power Supply}
+\subsubsection{Power Supply}
 An adapter rated for 12VDC @ 3A is used to connect the Server's board to mains electricity.
