--- a/Documents/Design/Hardware/overview.tex
+++ b/Documents/Design/Hardware/overview.tex
@@ -8,7 +8,7 @@
 The POW-R project is made of two main hardware components, the Server and the Satellites. The Server refers to the physical hardware from which the Display shall be served. It also acts as the data center for all Satellites associated to it, collecting data and administrating. The Satellites will talk over ZigBee specification to the one Zigbee module connected to the Server, and that one Zigbee module can talk to the Server over Universal Serial Bus (USB). Figure \ref{SystemOverview} shows the layout of the hardware system.
 
 
-\begin{figure}
+\begin{figure}[H]
 \centering
 \includegraphics[scale=0.3]{Hardware/images/SystemOverview.png}
 \caption{System Overview}
