--- a/Documents/Design/index.tex
+++ b/Documents/Design/index.tex
@@ -10,6 +10,7 @@
 \usepackage{parskip}
 \usepackage[hyphens]{url}
 \usepackage[hypertexnames=false, bookmarks=true, bookmarksnumbered=true, breaklinks=true, linkbordercolor={1 1 1}]{hyperref}
+\usepackage{listings}
 
 %% Chapter titles
 \usepackage[T1]{fontenc}
@@ -24,6 +25,7 @@
 % Formatting options
 \renewcommand{\chaptername}{}
 \newcommand{\theTitle}{System And Software Architecture}
+\newcommand{\filename}[1]{\texttt{#1}}
 
 \begin{document}
 
