fixed a broken \item tag that was messing up compilation
git-svn-id: svn://dunari.cis.vtc.edu/POWER@115 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Design/Hardware/Server-TalkToXBee.tex
+++ b/Documents/Design/Hardware/Server-TalkToXBee.tex
@@ -13,7 +13,8 @@ Mesh, it performs many tasks that will be discussed in the Satellite section, bu
 to the Server, the coordinator stands out in the following ways:
 
 \begin{itemize}
-	\item 
+	\item BLARP
+\end{itemize}
 
 % The Server's only connection to the Mesh is
 % the coordinator ZigBee. That's the Master
