--- a/Documents/Design/Hardware/overview.tex
+++ b/Documents/Design/Hardware/overview.tex
@@ -21,7 +21,7 @@ The POW-R project is made of two main hardware components, the Server and the Sa
 \input{Hardware/Server-TalkToXbee}
 
 \section{The Satellites}
-The Satellites are made up of two sets of hardware: Instruments for measuring and radios for communicating. The end product shall have casing around it, NEMA 5-15 sockets on one side, and prongs for a NEMA 5-15 male end on the other. However, it should be noted that prototyping will most likely involve all of the hardware being spread out on breadboards.
+The Satellites are made up of two sets of hardware: Instruments for measuring current and voltage, and radios for communicating that data to the Server. The end product shall have a hard casing around it, NEMA 5-15 sockets on one side, and prongs for a NEMA 5-15 male end on the other. However, it should be noted that prototyping will most likely involve all of the hardware being spread out on breadboards.
 \input{Hardware/Satellite-Circuit}
 \input{Hardware/Satellite-Hardware}
 \input{Hardware/Satellite-ZigBee}
